--- a/src/main/webapp/WEB-INF/templates/resetPassword.html
+++ b/src/main/webapp/WEB-INF/templates/resetPassword.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<h1><span th:text="#{greeting}"></span>, <span th:text = ${firstName}></span></h1>
 <!--todo: implement-->
-
+<a th:href="@{http://localhost:8080/resetPassword(token=${token})}">Follow to reset password</a>
 </body>
 </html>
