--- a/src/main/webapp/WEB-INF/templates/resetPassword.html
+++ b/src/main/webapp/WEB-INF/templates/resetPassword.html
@@ -7,6 +7,6 @@
 <body>
 <h1><span th:text="#{greeting}"></span>, <span th:text = ${firstName}></span></h1>
 <!--todo: implement-->
-<a th:href="@{http://localhost:8080/resetPassword(token=${token})}">Follow to reset password</a>
+<a th:href="@{http://localhost:8080/resetPassword(token=${token})}">Follow to reset newPassword</a>
 </body>
 </html>
